--- a/style.css
+++ b/style.css
@@ -97,6 +97,7 @@ tr:hover {
 
 .logo h1 {
     font-size: 4em; /* Taille de la police */
+    font-family:Arial, Helvetica, sans-serif;
     font-weight: bold; /* Gras */
     color: #007BFF; /* Couleur principale */
     text-transform: uppercase; /* Mettre en majuscules */
